--- a/03.Strings_and_operators.md
+++ b/03.Strings_and_operators.md
@@ -13,19 +13,25 @@ class newClass:
 >If the class is the blueprint, the object is the actual thing based on the class, and the instance is the soft, or the digital copy of the class
 
 ## Instance
-An instance is created when the class receives an argument. Because we add () to the name of the class, we have created an object. 
-**Syntax: **
+An **instance** is created when the class receives an argument. Because we add () to the name of the class, we have created an object. 
+
+**Syntax:**
+
 instance = ClassName(argument)
 
 ## Class Variables
 Class variable - a variable declared within a class; values are constant across all instances of a class. It can be defined within a class but not 
 within the methods of the class
+
 **Syntax:**
+```
 class SampleClass:
     class_variable = "insert value here" 
 instance = SampleClass(argument)
 print(instance.class_variable) #access the object's class variable by using the "instance.variable" syntax
-Example:
+```
+
+**Example:**
 ```
 class Pets:
     looks = "Pretty"
@@ -68,7 +74,7 @@ def introduce_Self(self):
 The only difference between the functions that we've been using and methods is that the methods needs an indent, since they are part of the class and 
 cannot stand alone like regular function can.
 
-Example:
+**Example:**
 ```
 class Guest:
     pass
@@ -86,16 +92,12 @@ print(g_1.interest) #Output - "Dancing"
 ## Arithmetic Operators and Precedence 
 ### Arithmetic Operators 
 **Arithmetic Operators** - operators that deal with numeric values and used to perform mathematical operations
-1. + (addition) 
-2. - (substraction)
-3. * (multiplication)
-4. / (division)
-5. % (Modulus Operator) - remainder
+1. *+* (addition) 
+2. *-* (substraction)
+3. (*) (multiplication)
+4. */* (division)
+5. *%* (Modulus Operator) - remainder
 6. ** (Exponentiation Operator) - uses the second value as an exponent
-Example:
-```
-print(7 ** 3)
-```
 7. // (Floor Division Operator) - rounds off the quotient
 
 ### Precedance 
@@ -106,7 +108,8 @@ Operator
 *, /, //, %
 >Exponential value have higher precedence over the basic arithmetic operators, like addition or substraction. However when we have an addition operator
 encased with parentheses, this will be of higher precedence than the exponential values.
-Example:
+
+**Example:**
 ```
 print((4-3)* 6 ** 2) #Output - 36
 ```
@@ -116,9 +119,9 @@ print((4-3)* 6 ** 2) #Output - 36
 **Comparison Operators** - compare two values. They indicate the difference between two values, such as if one is greater than or less than the other.
 1. == - two values are the same
 2. != - two values are not equal to each other
-3. > - determines if the first value greater than to the other value 
-4. < - determines if the first value smaller than to the other value
-5. >= - determines if the first value greater than or equal to the other value
+3. *>* - determines if the first value greater than to the other value 
+4. *<* - determines if the first value smaller than to the other value
+5. *>=* - determines if the first value greater than or equal to the other value
 6. <= - determines if the first value smaller than or equal to the other value
 
 **Logical Operators** - combine conditional statements
