--- a/03.Strings_and_operators.md
+++ b/03.Strings_and_operators.md
@@ -130,4 +130,4 @@ print((4-3)* 6 ** 2) #Output - 36
 3. not - reverses the result  
 
 ## Coding Exercise
-You can view my [03Classes.py](https://github.com/AbbeyIT/Python-Beginner-Notes/blob/main/Coding-Exercise/03.Classes.py) to see an example exercise for this topic.
+You can view my [03Classes.py](/Coding-Exercise/03Classes.py) to see an example exercise for this topic.
